# TW-TextForge

./: .dockerignore  .env.local  .gitattributes  .gitignore  README.md  agent_generate.ipynb  dev.ipynb  example.env  pyproject.toml
.github/workflows/: ci-dev.yml  ci-main.yml  ci.yml  dev.yml  docker.yml  main.yml  publish.yml  tests.yml
114/: README.md
data/: README.md  TW-TextForge-TestCSVUpload-data.csv
data/113/csv/: README.md
data/113/original/chinese_general/: 01-113學測國綜試題定稿.docx
data/114/: Chinese_General.csv
data/114/csv/: 114 學年度學科能力測驗試題 - 國綜.csv  README.md
data/114/original/Chinese_General/: 01-114學測國綜試題.docx
data/114/original/Math/A/: 03-114學測數學a試題.docx
data/114/original/Math/B/: 04-114學測數學b試題.docx
data/csv/: README.md  gsat_chinese_sample.csv
data/public-domain/: README.md
docker/: .dockerignore  docker-compose.yml  dockerfile
docker/dev/: docker-compose.yml  dockerfile
docker/main/: docker-compose.yml  dockerfile
docker/product/: docker-compose.yml
examples/: .env.local  Agent_Generate_Analysis.ipynb  Dataset_Load_And_Upload.ipynb  Dual_Agent.ipynb  GSATChineseGraph.ipynb  GSATChineseGraph_QuestionAnalysis.ipynb  GSAT_Chinese_QuestionAnalysis.ipynb  GSAT_Copy_Tools.ipynb  Modules_Hot_Update.ipynb  Multi_Agent.ipynb  PDF_Extractor.ipynb  Single_Agent.ipynb
samples/: Agent_Generate_Analysis.ipynb  Dataset_Load_And_Upload.ipynb  Modules_Hot_Update.ipynb  agent_generate.ipynb  dataset_load_and_upload.ipynb  example.env
src/tw_gsat/agent/: ai_model.py
src/tw_gsat/config/: settings.py
src/tw_gsat/dataset/: __init__.py  format.py
src/tw_gsat/prompt/: chinese.py
src/tw_textforge/: utils.py
src/tw_textforge/agent/GSAT/: chinese.py
src/tw_textforge/agent/general/: dual_agent_graph.py  multi_agnet_graph.py  single_agent_graph.py
src/tw_textforge/config/: settings.py
src/tw_textforge/data/GSAT/: csv.py
src/tw_textforge/dataset/GSAT/: csv.py
src/tw_textforge/prompt/GSAT/: chinese.py
src/tw_textforge/prompt/general/: general_prompt.py
src/tw_textforge/sdk/GSAT/: Chinese.py
tests/: test_gsat_chinese_questionanalysis.py  test_pdf_extractor.py  test_upload_datasets.py
