[project]
name = "tw-gsat"
version = "0.0.1"
requires-python = ">3.10"
dependencies = [
    "setuptools",
    "ipykernel",
    "ipywidgets",
    "nest_asyncio",
    "jupyterlab_widgets",
    
    "pydantic",
    "python-dotenv",
    
    "huggingface_hub[cli]",
    "datasets",
    "datasets[audio]",
    "datasets[vision]",

    "langchain",
    "langchain_community",
    "langgraph",
    "langchain-google-genai",
    "langchain-openai",
    "langchain_ollama",
    "langchain-qdrant",
    "qdrant-client",
    
    "lxml",
    "beautifulsoup4",
]