[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tw_textforge"
version = "0.0.2"
requires-python = ">3.10"
description = ""
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]

authors = [
  { name = "Xuan‑You Lin", email = "a0985821880@gmail.com" }
]

maintainers = [
  { name = "Xuan‑You Lin", email = "a0985821880@gmail.com" }
]

dependencies = [
    "setuptools",
    "ipykernel",
    "ipywidgets",
    "nest_asyncio",
    "jupyterlab_widgets",
    
    "pydantic",
    "python-dotenv",
    
    "huggingface_hub[cli]",
    "datasets",

    "langchain",
    "langchain_community",
    "langgraph",
    "langchain-google-genai",
    "langchain-openai",
    "langchain_ollama",
    "langchain-qdrant",
    "qdrant-client",
    
    "lxml",
    "beautifulsoup4",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]